feat: add pre-commit hooks

--- a/config/CHANGELOG.md.j2
+++ b/config/CHANGELOG.md.j2
@@ -18,7 +18,7 @@
 {% if change.scope %}
 - **{{ change.scope }}**: {{ change.message }}
 {% elif change.message %}
-- {{ change.message }} by @{{ change.author }}
+- {{ change.message }}
 {% endif %}
 {% endfor %}
 {% endfor %}
